src/color-schemes/contrast.scss
/* ... */
// Default Workspace & Tabs
body:is(.contrast-light-tonal.theme-light, .contrast-dark-tonal.theme-dark, .contrast-dark-black.theme-dark, .contrast-dark-black-mobile.is-mobile.theme-dark) {
  &.layout-baseline:not(.is-phone) .mod-root {
    .workspace-tabs {
      overflow: visible;
    }
    .workspace-tab-container {
      outline: var(--tab-outline-width) solid var(--tab-outline-color);
    }
  }

  &.tab-default .mod-root {
    --tab-outline-width: 1px;
    --tab-outline-color: var(--color-base-30);

    .workspace-tab-header {
      --tab-outline-width: 1px;
    }
  }
}

